fixed where links jump across page

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,5 +1,5 @@
 body {
-  padding-top: 200px;
+  padding-top: 250px;
   background-color: #eee; }
 
 table img {
